--- a/styles/style.css
+++ b/styles/style.css
@@ -4,23 +4,28 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  max-width: 1340px;
   margin: 0 auto;
-  padding: 92px 50px;
+  padding: 92px 49px 96px 51px;
 }
 
 .header__logo {
   display: block;
   width: 148px;
+  height: 105px;
 }
 
 .header__links-list {
   display: flex;
-  gap: 24px;
+  gap: 30px;
   font-size: 18px;
-  text-underline-offset: 4px;
+  text-underline-offset: 5px;
   text-transform: lowercase;
   list-style: circle;
+  padding: 0;
+}
+
+.header__links-list-item:not(.header__links-list-item_no-bullit) {
+  padding-left: 2px;
 }
 
 .header__links-list-item_no-bullit {
@@ -33,7 +38,7 @@
   justify-self: end;
   font-size: 18px;
   font-style: normal;
-  line-height: 24.3px;
+  line-height: 135%;
 }
 
 .adress a {
@@ -48,7 +53,7 @@
   z-index: 0;
   margin-bottom: 180px;
   padding: 165px 50px 50px 50px;
-  background-image: url(./images/cover.jpg);
+  background-image: url(/images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -67,6 +72,9 @@
 }
 
 .cover__title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   margin-bottom: 135px;
   color: #fff;
   font-weight: 700;
@@ -82,9 +90,11 @@
 }
 .aligned-text_center {
   text-align: center;
+  line-height: 100%;
 }
 .aligned-text_right {
   text-align: right;
+  line-height: 100%;
 }
 
 .letter-spacing-extended {
@@ -106,10 +116,10 @@
   color: #FFF;
   font-weight: 400;
   font-size: 22px;
-  line-height: 28px;
+  line-height: 127.273%;
   text-align: center;
   text-transform: uppercase;
-  word-spacing: 20px;
+  word-spacing: 18px;
 }
 
 .bet-button {
@@ -128,7 +138,7 @@
 /* БЛОК LOTS */
 
 .lots {
-  margin-bottom: 180px;
+  margin-bottom: 182px;
   padding: 0 50px;
 }
 
@@ -147,12 +157,15 @@
   gap: 25px;
   margin-bottom: 30px;
   list-style: none;
+  min-height: 450px;
 }
 
 
 
 .card-link {
-  text-decoration-line: none;
+  display: block;
+  height: 100%;
+  text-decoration: none;
 }
 
 .card {
@@ -167,21 +180,21 @@
 }
 
 .card_type_film {
-  background-image: url(./images/card-lot-01.jpg);
+  background-image: url(/images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .card_type_book {
-  background-image: url(./images/card-lot-02.jpg);
+  background-image: url(/images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .card_type_picture {
-  background-image: url(./images/card-lot-03.jpg);
+  background-image: url(/images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -219,10 +232,10 @@
 
 .about {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr auto;
   gap: 25px;
   margin-bottom: 180px;
-  padding: 0px 50px;
+  padding: 0 50px;
 }
 
 .about__logo {
@@ -231,6 +244,7 @@
   height: 240px;
   border-radius: 50%;
   padding: 63px 46px;
+  margin: 0 95px;
   background-color: #000;
 }
 
@@ -243,6 +257,7 @@
 
 .about__text {
   font-size: 20px;
+  line-height: normal;
 }
 
 .about__text:not(:last-child) {
@@ -257,15 +272,15 @@
   display: grid;
   grid-template-columns: auto 1fr auto;
   margin-bottom: 90px;
-  padding: 0px 50px;
+  padding: 0 50px;
 } 
-
 
 .footer__menu-list {
   font-size: 18px;
   text-align: center;
   text-transform: lowercase;
   list-style: none;
+  text-underline-offset: 4px;
 }
 
 .footer__menu-link_active {
