--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,7 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  margin: 0 auto;
-  padding: 92px 49px 96px 51px;
+  padding: 92px 50px 96px 50px;
 }
 
 .header__logo {
@@ -21,10 +20,7 @@
   text-underline-offset: 5px;
   text-transform: lowercase;
   list-style: circle;
-  padding: 0;
 }
-
-
 
 .header__links-list-item_no-bullit {
   list-style: none;
@@ -66,8 +62,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  opacity: 0.6;
-  background-color: #000;
+  background-color: rgba(0,0,0, 0.6);
 }
 
 .cover__title {
@@ -84,9 +79,6 @@
 }
 
 
-.aligned-text {
-  display: block;
-}
 .aligned-text_center {
   text-align: center;
   line-height: 100%;
@@ -116,7 +108,6 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 127.273%;
-  text-align: center;
   text-transform: uppercase;
   word-spacing: 18px;
 }
@@ -157,6 +148,10 @@
   list-style: none;
   min-height: 450px;
   flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
 }
 
 .card-link {
@@ -219,8 +214,7 @@
   margin-left: 40px;
   font-weight: 400;
   font-size: 20px;
-  line-height: normal;
-  text-underline-offset: 4px;
+  text-underline-offset: 5px;
   text-transform: lowercase;
 }
 
@@ -255,7 +249,6 @@
 
 .about__text {
   font-size: 20px;
-  line-height: normal;
 }
 
 .about__text:not(:last-child) {
