--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 body {
   min-width: 1100px;
   margin: 0;
-  font-family: Raleway, sans-serif;
+  font-family: Raleway, Arial, sans-serif;
 }
 
 h1,
@@ -26,6 +26,7 @@ blockquote {
 }
 
 a {
+  position: relative;
   color: inherit;
 }
 
