--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,26 @@
   list-style: none;
 }
 
+.header__link {
+  transition-duration: 0.3s;
+}
+
+.header__link:hover {
+  color: blue;
+  transition-duration: 0.3s;
+}
+
+.header__link_active {
+  text-decoration: none;
+  cursor: default;
+}
+
+.header__link_active:hover {
+  color: inherit;
+}
+
+
+
 .adress {
   display: flex;
   flex-direction: column;
@@ -33,13 +53,18 @@
   font-size: 18px;
   font-style: normal;
   line-height: 135%;
+  width: 240px;
 }
 
-.adress a {
+.adress__link {
   text-underline-offset: 4px;
-  white-space: nowrap;
+  transition-duration: 0.3s;
 }
 
+.adress__link:hover {
+  color: blue;
+  transition-duration: 0.3s;
+}
 
 /* БЛОК COVER */
 
@@ -74,7 +99,7 @@
   font-weight: 700;
   font-size: 100px;
   line-height: 115%;
-  letter-spacing: 30px;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
@@ -89,7 +114,7 @@
 }
 
 .letter-spacing-extended {
-  letter-spacing: 60px;
+  letter-spacing: 0.6em;
 }
 
 .no-letter-spacing {
@@ -116,13 +141,20 @@
   border: 1px solid #fff;
   padding: 12px 32px;
   color: #FFF;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: normal;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
+  transition-duration: 0.3s;
 }
 
+.bet-button:hover {
+  background-color: #fff;
+  color: #000;
+  transition-duration: 0.3s;
+}
 
 
 /* БЛОК LOTS */
@@ -146,12 +178,13 @@
   gap: 25px;
   margin-bottom: 30px;
   list-style: none;
-  min-height: 450px;
   flex-wrap: wrap;
 }
 
 .lots__card-list-item {
   flex-grow: 1;
+  width: 430px;
+  min-height: 450px;
 }
 
 .card-link {
@@ -168,29 +201,22 @@
   justify-content: space-between;
   gap: 30px;
   height: 100%;
-  width: 430px;
   padding: 50px 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card__title {
@@ -216,6 +242,12 @@
   font-size: 20px;
   text-underline-offset: 5px;
   text-transform: lowercase;
+  transition-duration: 0.3s;
+}
+
+.lots__look-more-link:hover {
+  color: blue;
+  transition-duration: 0.3s;
 }
 
 
@@ -272,10 +304,25 @@
   text-transform: lowercase;
   list-style: none;
   text-underline-offset: 4px;
+  line-height: normal;
 }
 
-.footer__menu-link_active {
+.footer__menu-link {
+  transition-duration: 0.3s;
+}
+
+.footer__menu-link:hover {
+  color: blue;
+  transition-duration: 0.3s;
+}
+
+.footer__menu-link_active  {
   text-decoration: none;
+  cursor: default;
+}
+
+.footer__menu-link_active:hover {
+  color: inherit;
 }
 
 .footer__social-list {
@@ -287,5 +334,14 @@
 .footer__social-link {
   display: block;
   width: 48px;
-  height: 48px;
+  height: 48px; 
+}
+
+.footer__social-link-image {
+  transition-duration: 0.3s;
+}
+
+.footer__social-link-image:hover {
+  transform: scale(1.1);
+  transition-duration: 0.3s;
 }
